<resources>
    <string name="app_name">CalculatorApplication</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="multiply">x</string>
    <string name="add">+</string>
    <string name="substraction">-</string>
    <string name="division">/</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="madd">M+</string>
    <string name="mminus">M-</string>
    <string name="mr">MR</string>
    <string name="mc">MC</string>
    <string name="percentage">%</string>
    <string name="exponent">^</string>
    <string name="pi">Pi</string>
    <string name="display">Enter the value</string>



</resources>